<resources>
    <string name="app_name">Calculadora</string>

    <string name="textoInicio">0</string>
    <string name="buttonClear">C</string>
    <string name="buttonSigno">+-</string>
    <string name="buttonPorcentaje">%</string>
    <string name="buttonDivide">/</string>

    <string name="buttonSiete">7</string>
    <string name="buttonOcho">8</string>
    <string name="buttonNueve">9</string>
    <string name="buttonMultiplica">X</string>

    <string name="buttonCuatro">4</string>
    <string name="buttonCinco">5</string>
    <string name="buttonSeis">6</string>
    <string name="buttonResta">-</string>

    <string name="buttonUno">1</string>
    <string name="buttonDos">2</string>
    <string name="buttonTres">3</string>
    <string name="buttonSuma">+</string>

    <string name="buttonCero">0</string>
    <string name="buttonComa">,</string>
    <string name="buttonIgual">=</string>

</resources>